--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.6",
     "pg": "^8.11.3"
   }
 }
