--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.17.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.6",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sharp": "^0.32.6"
   }
 }
